// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Frembed handle battle royal 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "fr",
      ],
      "referer": "https://frembed.work",
      "title": "Battle Royale (2000)",
    },
    "url": "https://myvidplay.com/e/gtenfs0rffzq",
  },
  {
    "meta": {
      "countryCodes": [
        "fr",
      ],
      "referer": "https://frembed.work",
      "title": "Battle Royale (2000)",
    },
    "url": "https://lancewhosedifficult.com/e/lbeqm6ofmauq",
  },
  {
    "meta": {
      "countryCodes": [
        "fr",
      ],
      "referer": "https://frembed.work",
      "title": "Battle Royale (2000)",
    },
    "url": "https://uqload.is/embed-pnxmokgrigu9.html",
  },
]
`;

exports[`Frembed handle imdb black mirror s4e2 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "fr",
      ],
      "referer": "https://frembed.work",
      "title": "Black Mirror S04E02",
    },
    "url": "https://ahvsh.com/e/83izf7qzwpae,https://netu.frembed.fun/e/0DFgfkcXOsDP,https://likessb.com/e/7yjgl1x56n08.html,https://ds2play.com/e/fzfvfq3ngig0",
  },
  {
    "meta": {
      "countryCodes": [
        "fr",
      ],
      "referer": "https://frembed.work",
      "title": "Black Mirror S04E02",
    },
    "url": "https://myvidplay.com/e/dfx8me4un4ul",
  },
  {
    "meta": {
      "countryCodes": [
        "fr",
      ],
      "referer": "https://frembed.work",
      "title": "Black Mirror S04E02",
    },
    "url": "https://lancewhosedifficult.com/e/cqy9oue7sv0g",
  },
]
`;

exports[`Frembed handle tmdb black mirror s4e2 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "fr",
      ],
      "referer": "https://frembed.work",
      "title": "Black Mirror S04E02",
    },
    "url": "https://ahvsh.com/e/83izf7qzwpae,https://netu.frembed.fun/e/0DFgfkcXOsDP,https://likessb.com/e/7yjgl1x56n08.html,https://ds2play.com/e/fzfvfq3ngig0",
  },
  {
    "meta": {
      "countryCodes": [
        "fr",
      ],
      "referer": "https://frembed.work",
      "title": "Black Mirror S04E02",
    },
    "url": "https://myvidplay.com/e/dfx8me4un4ul",
  },
  {
    "meta": {
      "countryCodes": [
        "fr",
      ],
      "referer": "https://frembed.work",
      "title": "Black Mirror S04E02",
    },
    "url": "https://lancewhosedifficult.com/e/cqy9oue7sv0g",
  },
]
`;
